@@ -4,6 +4,7 @@
 	- install dirs created with -m 755 because they need to be accessible.
 	- library extensive featurelist added to TODO.
 	- please doxygen, lint.
+	- library test application, with basic functionality.
 
 30 November 2007: Wouter
 	- makefile that creates libunbound.la, basic file or libunbound.a
